Update to Java v11